--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="/blog/">Blog</a>
+      <a href="/projects/">Projects</a>
     </nav>
     <h1>jekyll</h1>
     <section>
-      Sample Projects
+      My name is Herman. By day, I am a Manufacturing Engineer working at a
+      semiconductor company. By night, I become a coder.
     </section>
     <footer>
       &copy; to me
