--- a/minesweeper.html
+++ b/minesweeper.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="/assets/css/minesweeper.css" type="text/css" />
     <title>Minesweeper</title>
   </head>
   <body>
     <h1>Minesweeper</h1>
     <div id="container"></div>
-    <script src="index.js"></script>
+    <script src="/assets/js/minesweeper.js"></script>
   </body>
 </html>
