--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>title</title>
-  </head>
-  <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/projects/">Projects</a>
-    </nav>
-    <h1>jekyll</h1>
-    <section>
-      My name is Herman. By day, I am a Manufacturing Engineer working at a
-      semiconductor company. By night, I become a coder.
-    </section>
-    <footer>
-      &copy; to me
-    </footer>
-  </body>
-</html>
+---
+layout: front
+---
